# audit-toolbox

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  build_suite.py  requirements.txt  suite.spec  suite_main.py  tools.json  克隆Excel合并工具.bat  克隆模块示例.bat  启动审计工具箱.bat  审计工具箱.code-workspace  打包审计工具箱.bat  打包审计工具箱.vbs  打开审计工具箱工作区.bat  添加工具.bat  添加工具.py  添加工具使用说明.md  解除文件锁定.bat
launcher/: __init__.py  bundle_anchor.py  hub_window.py  registry.py  runner.py
modules/: README.md
modules/AI-file/: .gitignore.bak  AGENTS.md  pyproject.toml
modules/AI-file/docs/: PROJECT_STRUCTURE.md  architecture.md  audit-workflow.md  case-workpaper-diagnostic.md  domain-glossary.md  progress.md  qc-checklist.md  sheet-classification.md  source-materials-reading-notes.md  tasks.md  workpaper-fields.md
modules/AI-file/docs/decisions/: ADR-0001-mvp-scope.md
modules/AI-file/docs/handoff/: latest.md
modules/AI-file/src/ingest/: README.md  __init__.py  cli.py  constants.py  field_mapping.py  header_detection.py  models.py  sheet_classifier.py  workbook_reader.py
modules/AI-file/src/report/: README.md
modules/AI-file/src/rules/: README.md
modules/AI-file/tests/fixtures/: README.md
modules/AI-file/tests/ingest/: test_field_mapping.py  test_sheet_classifier.py
modules/AI-file/tests/rules/: README.md
modules/AI-file/固定资产质检agent/资料库/: K.03.1 SAP-中精确度.xlsx  K.03.1 SAP-高精确度.xlsx  K1 SWP 固定资产 202YMMDD XYZ公司.xlsx  K1 SWP 固定资产 202YMMDD XYZ公司（By item折旧测试）.xlsx  K1 check list.xlsx
modules/April-tools/: .gitignore.bak
modules/Excel-Merger/: .gitignore.bak  (+3 more)
(+45 files in other folders)
