[project]
name = "fixed-asset-qc-agent"
version = "0.1.0"
description = "Fixed asset quality inspection agent"
readme = "AGENTS.md"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
fa-qc-diagnose = "ingest.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
